--- a/FINAL/travel-booking/pom.xml
+++ b/FINAL/travel-booking/pom.xml
@@ -92,10 +92,10 @@
             <version>2.14.2</version>
         </dependency>
         <dependency>
-            <groupId>org.webjars.npm</groupId>
-            <artifactId>axios</artifactId>
-            <version>0.21.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
