--- a/FINAL/travel-booking/src/main/resources/application.yml
+++ b/FINAL/travel-booking/src/main/resources/application.yml
@@ -38,6 +38,22 @@ spring:
           auth: true
           starttls:
             enable: true
+
+  #    spring:
+  #      datasource:
+  #        url: jdbc:h2:mem:testdb
+  #        username: sa
+  #        password: ""
+  #        driver-class-name: org.h2.Driver
+  #      jpa:
+  #        database-platform: org.hibernate.dialect.H2Dialect
+  #      h2:
+  #        console:
+  #          enabled: true
+  #          path: /h2-console
+  #
+
+
 application:
   security:
     jwt:
