--- a/FINAL/travel-booking/pom.xml
+++ b/FINAL/travel-booking/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>firebase-admin</artifactId>
             <version>8.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version> <!-- Chỉnh version phù hợp -->
+        </dependency>
+
         <!--        <dependency>-->
         <!--            <groupId>com.h2database</groupId>-->
         <!--            <artifactId>h2</artifactId>-->
